Made use of a new method in the topic modeling algorithm to do all iteration steps with one single method call.